--- a/Kaiserreich Korean Translation/localisation/KR_Nicaragua_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Nicaragua_l_english.yml
@@ -264,7 +264,7 @@ nic.1.a:0 "혁명을 위하여!"
 
 nic.2.t:0 "해방의 날"
 nic.2.d:0 "Today is the anniversary of the revolution which liberated our nation from the Americans and their lapdogs. While Sacasa and Moreno were both involved in the revolution, Sandino is more widely credited for the revolution's success. Sandino's popularity has increased because of the celebrations, but to supporters of opposition parties, the day has only further their disdain for the man. They claim that this celebration with all its cult-like pomp and circumstance is 'Sandino trying to brainwash the population'"
-nic.2.a:0 "Central America is next"
+nic.2.a:0 "중앙 아메리카가 다음이다 "
 
 nic.3.t:0 "사카사가 전국을 순회하다."
 nic.3.d:0 "With the recent celebrations of Liberation Day, Sandino and his supporters have a slight edge in popularity over the other parties. To counter this, Sacasa has begun a countrywide tour to meet with constituents in hopes of securing their vote come April. While so far, the campaign seems to have been a success, Sandino's supporters, known as 'Sandinistas', now claim that Sacasa is disrespecting the Liberation Day holiday and Sandino himself with this move. Some prominent Sandinistas have even called for violence against Sacasa himself."
@@ -800,17 +800,17 @@ nicdec.9.t:0 "Our Survival"
 nicdec.9.d:0 "Through sheer determination and the people's belief in us, our country has managed to survive the war against Nicaragua. With our country at peace once again, we must prepare for the future. This conflict is surely only one in the grand scheme of the new way Central America will work with the United States. We'll need to prepare our country and people for more wars in the future."
 nicdec.9.a:0 "The atmosphere of Central America is intense"
 
-nicdec.10.t:0 "Honduras Falls"
+nicdec.10.t:0 "온두라스가 몰락하다"
 nicdec.10.d:0 "Honduras has officially surrendered to us, resulting in the fall of their previous regime that fought against us, and the raising of a new and better Honduras, directly aligned to us. Our great success in this has greatly increased the popularity of the ruling government, making everyone believe that the time until the rest of Central America is liberated won't be long."
-nicdec.10.a:0 "For Central America!"
+nicdec.10.a:0 "중앙 아메리카를 위해!"
 
 nicdec.11.t:0 "Relations with Honduras Cool"
 nicdec.11.d:0 "The emergence of a friendly regime in Honduras has caused relations between our two nations to cool. Sadly, the National Guard which is seen as an enemy to all Nicaraguans has fled from Honduras, most likely into another American-aligned country. Despite this, Honduras is now an ally in the revolution alongside us."
 nicdec.11.a:0 "One step at a time"
 
-nicdec.12.t:0 "Nicaragua Declares Monroe Dead"
+nicdec.12.t:0 "니키과라가 먼로 독트린의 죽음을 선언하다"
 nicdec.12.d:0 "Nicaragua in response to our recent crisis has thrown off the shackles of the Monroe Doctrine, declaring it a 'Outdated and foreign implication'. Sadly, we cannot do much against this due to our country's condition but it's something to keep in mind for the future."
-nicdec.12.a:0 "They'll pay for this..."
+nicdec.12.a:0 "대가를 치르게 될것이다...."
 
 nicdec.13.t:0 "Resistance Against Recruitment"
 nicdec.13.d:0 "The decision to open up recruitment in the west has caused extreme controversy among the populace. People have taken protest in the streets, claiming that they are grateful for their liberation but feel they deserve to be exempt from recruitment due to their elongated occupation. Some of the population in the west agrees with them as well, leaving us at a standstill on whether to continue the recruitment or abandon the project until later."
@@ -853,7 +853,7 @@ nicdec.22.t:0 "Uprising in Southern Nicaragua"
 nicdec.22.d:0 "Upset over conscription, a small group of Nicaraguans in the southeast of Nicaraguans have taken up arms against their own country. Declaring our cause as just, they've officially defected to our side to end their 'oppression'. This provides a good distraction for us along with an opportunity to break through the Nicaraguan lines."
 nicdec.22.a:0 "Our time is now"
 
-nicind.1.t:0 "Status of the Nicaraguan Economy"
+nicind.1.t:0 "니키과라 경제의 상황"
 nicind.1.d:0 "Nicaragua despite its size and variety of products is generally known as the poorest country within Central America. Constant crisis, military occupation by the United States, and the subsequent revolution left our country dry, largely exportless, and caused it to enter a subsequent recovery phase.\n\nWith our reliance on the United States already removed by the time they stopped buying products from us after the revolution, we've been left looking desperately for new partners. Countries rely in range and could bring great profit, but we'll need to be constantly aware of the United States one day knocking on our doorstep again, stronger than ever."
 nicind.1.a:0 "For a brighter future"
 
@@ -916,23 +916,23 @@ nicind.13.a:0 "A shame"
 
 NIC_36_election:0 "새 선거"
 NIC_36_election_desc:0 "The 1936 election will be the second election in Nicaragua's revolutionary republic. The main contenders are Juan Bautista Sacasa, who stands for liberalism, Francisco Sequeira Moreno, who stands for the poor population, and hero of the revolution Augusto César Sandino."
-NIC_freeing_people:0 "'인민을 자유롭게"
+NIC_freeing_people:0 "'인민을 자유롭게 하고"
 NIC_freeing_people_desc:0 "Sandino's most ravenous supporters, known as the Sandinistas, have been causing trouble for the local population and the other parties. Sandino has begun to make movies to calm this small section of the population to turn them into dignified soldiers willing to die for the revolution rather than Sandino himself."
 NIC_establish_sandinistas:0 "우리 스스로 지키자"
 NIC_establish_sandinistas_desc:0 "Sandino has demanded the production of propaganda films to calm this small section of the population in order to turn them into dignified soldiers willing to die for the revolution rather than Sandino himself."
 NIC_revolution_necessary:0 "그리고 평화적 혁명을 가져오자'"
 NIC_revolution_necessary_desc:0 "With Sandino's part in preparing the army to spread the revolution, he has now laid out his objectives for the coming struggle. The first is to eliminate the traitors exiled in Honduras, the second is to spread the revolution to the rest of Central America, and the third is establish a united Central America in which our peoples can live and thrive. This agenda has increased the support for war in the country with Sandino himself preparing to lead the army to battle."
-NIC_promoting_literacy:0 "'Back in the Day, I Couldn't Read"
+NIC_promoting_literacy:0 "'예전에는 나는 문맹이였다"
 NIC_promoting_literacy_desc:0 "Moreno's election has allowed him to finally implement his planned reforms for the country. The first thing he wants to fix is the high illiteracy within the country by building schools and hiring teachers to teach the next generation Spanish."
-NIC_wealth_distribution:0 "And No Money was Available"
+NIC_wealth_distribution:0 "그리고 돈도 부족했다 "
 NIC_wealth_distribution_desc:0 "With the educational reforms complete, Moreno has shifted focus to ensuring a more equal distribution of wealth. Preparations are being made to finance several large monetary windfalls for the nation’s poorest both through state funding and the seizure of assets from exploitative businesses and individuals."
 NIC_for_common_man:0 "그래서 나는 서민의 편이다"
 NIC_for_common_man_desc:0 "Moreno's reforms have calmed many formerly unruly individuals. With the country at last at rest, Moreno has now declared it 'ready to spread its ideals to other countries as well'."
-NIC_new_liberal_mindset:0 "'The Liberal Mindset"
+NIC_new_liberal_mindset:0 "'자유주의의 정신은"
 NIC_new_liberal_mindset_desc:0 "Sacasa has a stanch focus on the original liberal revolution that took place in Nicaragua, and where it failed and succeeded. Sacasa wishes to ensure his ideals remain true through the revolutionary republic and spread it to the rest of Central America."
-NIC_new_bonds:0 "다른 이들과 나누다"
+NIC_new_bonds:0 "다른 이들과 나누고"
 NIC_new_bonds_desc:0 "Our reliance on the United States is what forced the liberal revolution to occur in the first place, and must be avoided at all costs. Powers like Germany and Canada could be of potential interest for us to succeed in the long run."
-NIC_relations_no_dependence:0 "As Long as We Always are Self-Dependent'"
+NIC_relations_no_dependence:0 "경제적 자립을 스스로 유지하는 것이다'"
 NIC_relations_no_dependence_desc:0 "While the help from foreigners to achieve our goals is appreciated, another United States situation must be avoided at all costs. Our relations must be diversified in order to avoid reliance on a single power ever again."
 NIC_seizing_countryside:0 "Seizing the Countryside"
 NIC_seizing_countryside_desc:0 "With the United States collapsing on itself, we can make the previous four years’ worth it. It's time we reclaim the east of our country in the name of our revolution."
@@ -1003,9 +1003,9 @@ NIC_preparing_liberation_desc:0 "The time has come for the people of Central Ame
 NIC_distributing_UFC_land:0 "Distributing Foreign Wealth"
 NIC_distributing_UFC_land_desc:0 "The ill-gotten gains repatriated from the United Fruit Company and other imperialist endeavors have sat in state treasuries in anticipation of conflict. With the political situation calming at last, let us liquidate these holdings and distribute the profits directly to the people."
 
-NIC_second_occupation:0 "The Second Occupation"
+NIC_second_occupation:0 "두번째 점령기 "
 NIC_second_occupation_desc:0 "With the invasion from foreigners, Nicaragua has entered a second occupation. To the south lies the threat of Sandino, and to the north we have our overlords we must obey to ensure we survive against him."
-NIC_crushing_resistance:0 "Crushing Resistance"
+NIC_crushing_resistance:0 "저항군 분쇄 "
 NIC_crushing_resistance_desc:0 "Sandino's southern resistance is still relatively new, and getting the early foot on them is necessary for our eventual triumph over them."
 NIC_us_imports:0 "Assistance to the End"
 NIC_us_imports_desc:0 "Our overlord is interested in ensuring we remain stable, or at least we think they are. Regardless, petitioning for help is our best move in finishing off Sandino."
