--- a/Kaiserreich Korean Translation/localisation/KR_Lombardy_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Lombardy_l_english.yml
@@ -33,127 +33,127 @@ LOM_agricultural_subsidies:0 "농업 보조금"
 LOM_agricultural_subsidies_desc:0 "Our initial land reform initiatives have been successful. Now, in order to increase yields, we should offer comprehensive agricultural subsidies."
 LOM_wounds_of_war:0 "전쟁의 상처"
 LOM_wounds_of_war_desc:0 "After such sustained bloodshed, the many wounds gouged into Lombardia and its people are at last beginning to heal. To truly mend such extensive trauma, however, will require a concentrated societal and governmental effort. To begin the process, the most essential of damaged infrastructure and centres of commerce should be immediately restored."
-LOM_lombard_constitution:0 "롬바르드인을 위한 헌법"
+LOM_lombard_constitution:0 "롬바르드인의 헌법"
 LOM_lombard_constitution_desc:0 "While our duchy may still be young, it is now in a much more stable position. The time has come to draft a new constitution and finalize the structure of our government."
-LOM_universal_suffrage:0 "보통 선거권"
+LOM_universal_suffrage:0 "보통선거"
 LOM_universal_suffrage_desc:0 "While the Duke is undoubtedly virtuous and just, he and the Lombard people alike understand the value of representative government in curtailing the injustices inevitably wrought by any bureaucracy. The right to vote must be guaranteed to all of Lombardia’s people."
-LOM_strengthen_duke:0 "공작의 영향력 강화"
-LOM_strengthen_duke_desc:0 "정의로우신 롬바르디아의 공작께서는 사람들에게 아버지와도 같습니다. 다른 좋은 아버지들처럼, 그는 때때로 그의 자식들에게 단호하게 발전을 이끌어야만 합니다. 정의와 번영이 보장된다면, 공작께서 롬바르디아의 최고 권위자가 되셔야 합니다."
+LOM_strengthen_duke:0 "공작의 권력 강화"
+LOM_strengthen_duke_desc:0 "정의로우신 롬바르디아의 공작께서는 국민들의 아버지와도 같습니다. 다른 좋은 아버지들처럼, 그는 때때로 그의 자식들에게 단호하게 발전을 이끌어야만 합니다. 정의와 번영이 보장된다면, 공작께서 롬바르디아의 최고 권위자가 되셔야 합니다."
 LOM_denounce_ambrosia:0 "Denounce the Golden Ambrosian Idea"
 LOM_denounce_ambrosia_desc:0 "With the restoration of Lombardia, many Lombard Republicans, undeterred by the failure of their beloved Italian Republic, embraced the legacy of old Ambrosia, a uniquely Lombard strain of Republicanism. We must once and for all repudiate republicanism while also affirming constitutional governance."
-LOM_return_crown:0 "롬바르디아 왕관 반환 요청"
-LOM_return_crown_desc:0 "성유물, 엘레나의 성정이 둘러져 있는 롬바르디아의 철 왕관은 훗날 신성 로마 제국의 황제가 되는 옛 프랑크 왕국 왕들의 대관식의 핵심이었습니다. 이 왕관은 세계대전 후에 오스트리아가 가져갔습니다; 롬바르디아는 더 이상 폐허가 아니기 때문에, 이 중요한 정통성의 상징과 롬바르디아 왕위 그 자체의 반환을 요청할 때가 왔습니다."
+LOM_return_crown:0 "롬바르디아 철관 반환 요청"
+LOM_return_crown_desc:0 "성유물, 엘레나의 성정을 녹여서 둘렀다고 전해지는 롬바르디아의 철관은 (훗날 신성 로마 제국의 황제가 되는)옛 프랑크 왕국 왕들의 대관식에 있어 필수였던 물건입니다. 이 철관은 세계대전 직후 오스트리아가 가져갔습니다; 롬바르디아는 더 이상 폐허가 아니기 때문에, 이 중요한 정통성의 상징과 롬바르디아 왕위 그 자체의 반환을 요청할 때가 왔습니다."
 LOM_crown_king:0 "롬바르디아의 왕"
-LOM_crown_king_desc:0 "롬바르디아의 철 왕관이 이제 우리의 것이고 우리 나라가 확고하게 인정받은 지금, 이제 우리의 위대한 공작께서는 더 이상 어울리지 않는 칭호로 불릴 필요는 없습니다. 그와 우리 국민을 위해, 롬바르디아 왕국을 선포합시다."
-LOM_extinguish_flames:0 "Extinguish the Flames of Republicanism"
-LOM_extinguish_flames_desc:0 "Republican dissidents have been a thorn in our nation’s side since its establishment. With our government now established, let us snuff out this troublesome movement."
-LOM_encourage_nationalism:0 "Encourage Lombard Nationalism"
-LOM_encourage_nationalism_desc:0 "The Lombard people have witnessed defeat after defeat and suffered countless tragedy in recent years. Their spirit and love of their homeland, however, has not been broken. We must harness this unyielding quality of character; let every man be emboldened to defend his home!"
-LOM_lombard_youth:0 "Youth Lombard League"
+LOM_crown_king_desc:0 "롬바르디아의 철관이 우리 손에 돌아왔고, 우리나라 역시 확고히 승인받은 지금, 이제 우리의 위대한 공작께서 더 이상 어울리지 않는 칭호로 불릴 필요는 없습니다. 그와 우리 국민을 위해, 롬바르디아 왕국을 선포합시다."
+LOM_extinguish_flames:0 "공화주의의 불꽃을 꺼뜨리다"
+LOM_extinguish_flames_desc:0 "반체제 공화주의자들은 건국 이래로 쭉 우리의 골칫거리가 되어 왔습니다. 이제 우리 정부가 자리잡았으니, 이 골치 아픈 움직임을 몰아냅시다."
+LOM_encourage_nationalism:0 "롬바르드 민족주의 조장"
+LOM_encourage_nationalism_desc:0 "롬바르드인들은 패배 이후 또 패배하는 조국을 목격했고, 최근 몇 년 동안 수많은 비극을 겪어왔습니다. 그러나 그들이 가진 조국에 대한 정신과 사랑은 아직 깨지지 않았습니다. 우리는 롬바르드인들이 가진 이 강인한 인격의 등을 떠밀어줘야 합니다. 모든 사람들이 본인의 가정을 지키기 위해 더 용맹하고 대담해지도록 말입니다!"
+LOM_lombard_youth:0 "롬바르드 청년 연맹"
 LOM_lombard_youth_desc:0 "In the hearts of its youth is a nation’s integrity reinforced or destroyed. To build a stronger nation, the young of Lombardia must be instilled with national pride and an unwavering moral rectitude. A national organisation for the promotion of such qualities should be established immediately."
-LOM_economic_reorganization:0 "Economic Reorganisation"
+LOM_economic_reorganization:0 "경제 재편성"
 LOM_economic_reorganization_desc:0 "Lombardia’s economy was devastated by the Weltkrieg and ravages of the socialists, and has yet to fully recover. To remedy this, nearly every aspect of the economy must eventually be reorganised."
-LOM_repair:0 "Repair Efforts"
-LOM_repair_desc:0 "Much of our industry and infrastructure, despite neglect, can still be repaired. A national effort to fix our industry and infrastructure must be undertaken."
-LOM_milan_factory:0 "Expand Milanese Industrial Capacity"
+LOM_repair:0 "수리 및 복원"
+LOM_repair_desc:0 "파괴되고 손상된 우리의 산업과 기반 시설의 대다수는 지금껏 방치되었음에도 불구하고 여전히 수리할 수 있습니다. 우리의 산업과 기반 시설을 수리하기 위해서 반드시 국가적인 노력이 있어야만 할 것입니다."
+LOM_milan_factory:0 "밀라노 산업력 증강"
 LOM_milan_factory_desc:0 "Milan, Lombardia’s capital and industrial heart, due to its proximity to the Ticino river, sustained significant damage in the Italian Civil War. Now, this great city may at last be rebuilt and its industry expanded."
-LOM_Brescia_factory:0 "Expand Brescia Industrial Capacity"
+LOM_Brescia_factory:0 "브레시아 산업력 증강"
 LOM_Brescia_factory_desc:0 "Brescia, while an important center of culture, has long lagged behind the much of northern Italy in industrial development. Industrial expansion in Brescia can only be beneficial to the city and all Lombardia."
-LOM_rearmament:0 "Re-Armament Plans"
+LOM_rearmament:0 "재무장 계획"
 LOM_rearmament_desc:0 "Lombardia was an important center of armaments production prior to the Weltkrieg, and with investment, it can be again."
-LOM_heavy_industry:0 "롬바르디아의 중공업"
+LOM_heavy_industry:0 "롬바르디아 중공업"
 LOM_heavy_industry_desc:0 "Lombardia has long supported a vibrant array of heavy industry, and with the country slowly recovering, through government investment heavy industry can thrive again."
 LOM_railways:0 "신설 철도"
 LOM_railways_desc:0 "Many railways lie abandoned, and as Lombardia’s economy has shifted, some are no longer worth rebuilding. As a result, new railways are needed to connect our industrial centers."
-LOM_raw_materials:0 "Raw Material Investments"
+LOM_raw_materials:0 "원자재 투자"
 LOM_raw_materials_desc:0 "Lombard steel production was severely affected by conflict due to the complete cessation of iron mining operations throughout the region. We should renovate the mines and invest in steel production."
-LOM_nonrepublican_schools:0 "Non-Republican Curriculum"
+LOM_nonrepublican_schools:0 "비-공화주의 교육 과정"
 LOM_nonrepublican_schools_desc:0 "The threat of Republicanism can only be fully ended if our nation’s youth have the fortitude to reject its corruption. Our schools must instill values and represent political ideologies that our nation wishes to promote."
-LOM_education_reform:0 "Education Reform"
+LOM_education_reform:0 "교육 개혁"
 LOM_education_reform_desc:0 "After decades of conflict, the Lombard education system lags behind much of Western Europe. The entire system must be reformed on the German model."
-LOM_renaissance:0 "Lombard Renaissance"
+LOM_renaissance:0 "롬바르디아 르네상스"
 LOM_renaissance_desc:0 "With the economy back-on-track and society at last experiencing a modicum of normality, our nation is prospering. With alteration to our policies which have proven so successful at restoring Lombardia to its former glory, we can ensure sustained national prosperity – a modern Renaissance."
-LOM_patronage:0 "Patron of the Arts and Sports"
+LOM_patronage:0 "예술과 스포츠의 후원자"
 LOM_patronage_desc:0 "Our benevolent monarch is truly a Renaissance Man, and among his many passions are the arts and the art of sport. Inspired by his example, many of Lombardia’s wealthiest citizens have also donated significantly to the arts and sporting organisations. We should give further state support to these areas and ensure the contentment of our people."
-LOM_industrious_people:0 "An Industrious People"
+LOM_industrious_people:0 "근면한 사람들"
 LOM_industrious_people_desc:0 "Throughout history, Lombardia has been an economic powerhouse. We must encourage the natural productivity of our people."
-LOM_longobards:0 "Longobardian Revivalism"
-LOM_longobards_desc:0 "The Longobards, for whom Lombardia is named, were a Germanic people who conquered much of Italy in the sixth century. With our cultural Renaissance, many in our nation have become increasingly interested in them. We should promote this revival of interest in the Longobards to further solidify our national identity."
-LOM_new_army:0 "Re-Establishing the Army of the Lombards"
-LOM_new_army_desc:0 "Our young nation has so far relied heavily on foreign support for protection and maintaining its borders. If we are to survive, we will need a capable domestic military."
-LOM_officer_school:0 "Gian Galleazzo Officer School"
-LOM_officer_school_desc:0 "We are in dire need of a school for training commissioned officers. Who better to name it after than Gian Galleazzo, distant ancestor of our benevolent monarch, who was a capable military commander and equally skilled in his administrative duties."
-LOM_equipment_purchase:0 "Equipment Purchases"
+LOM_longobards:0 "롱고바르드 복고주의"
+LOM_longobards_desc:0 "롬바르디아라는 이름의 어원이 된 롱고바르드족은 6세기경 이탈리아의 대부분을 정복한 게르만계 민족입니다. 우리의 문화적 르네상스와 함께, 우리 나라의 많은 이들이 점점 더 그들에게 관심을 갖게 되었습니다. 우리는 우리의 국가 정체성을 더욱 공고히 하기 위해 롱고바르드족에 대한 이러한 관심을 장려해야 합니다."
+LOM_new_army:0 "롬바르디아 육군 재창설"
+LOM_new_army_desc:0 "우리나라는 지금 국경 방위에 대해서 외국의 지원에 크게 의존하고 있습니다. 우리가 앞으로 살아남기 위해서는, 능력있는 우리만의 군대가 필요할 것입니다."
+LOM_officer_school:0 "잔 갈레아초 육군 사관학교"
+LOM_officer_school_desc:0 "우리는 사관생도들을 훈련시키고 장교로 임관할 사관학교가 절실히 필요합니다. 여기엔 유능한 군 사령관이자 행정 업무에도 능숙했던, 우리 자애로우신 군주의 먼 조상인 잔 갈레아초보다 더 잘 어울리는 이름이 없습니다."
+LOM_equipment_purchase:0 "장비 도입"
 LOM_equipment_purchase_desc:0 "While the great degree of influence held by a foreign power over our government is not ideal, it does create the opportunity to purchase arms from our benefactor."
-LOM_heavy_armaments:0 "Heavy Armaments Industry"
-LOM_heavy_armaments_desc:0 "Heavy mechanical equipment is the backbone of the modern army, and we are severely lacking in it. We should capitalise on our industrial capacity to promote the growth a domestic industry for artillery and other heavy armaments."
-LOM_recruitment:0 "Recruitment Efforts"
+LOM_heavy_armaments:0 "중병기 산업"
+LOM_heavy_armaments_desc:0 "이제는 크고 무거운 기계장비들이 현대전의 중추입니다만, 우리는 그런 장비들이 심각하게 부족합니다. 우리는 국내 산업의 성장을 촉진시키기 위해 포병 등 여타 중병기들을 생산하는 데에 우리의 산업 역량을 투자해야 합니다."
+LOM_recruitment:0 "징병 노력"
 LOM_recruitment_desc:0 "While modern warfare is defined by of machines and industry, an army cannot function without men."
-LOM_drill:0 "Drill the Troops into Shape!"
-LOM_drill_desc:0 "Our troops lack experience, and while training is no replacement for actual combat, to make up for the small size of our armed forces, our green units must be as prepared for war as is possible. To accomplish this, we must hire new drill instructors."
-LOM_armored:0 "Armoured Forces"
- LOM_armored_desc:0 "Cavalry, the age-old lynchpin of tactical success, is increasingly being supplanted by armoured vehicles.  If we are to succeed on the battlefields of today, we must have tanks."
-LOM_artillery_purchase:0 "Artillery Purchases"
+LOM_drill:0 "병사들을 훈련시켜라!"
+LOM_drill_desc:0 "우리 군은 경험이 부족합니다. 훈련은 결코 실전을 대체할 수 없지만, 안그래도 작은 규모의 우리 군을 군대 구실이라도 하도록 만들기 위해서는 가능한 한 전쟁에 대비해야만 합니다. 이를 위해 우리는 새로운 훈련 고문관들을 고용해야 합니다."
+LOM_armored:0 "기갑부대"
+LOM_armored_desc:0 "Cavalry, the age-old lynchpin of tactical success, is increasingly being supplanted by armoured vehicles.  If we are to succeed on the battlefields of today, we must have tanks."
+LOM_artillery_purchase:0 "야포 도입"
 LOM_artillery_purchase_desc:0 "While our investment in the heavy armaments industry has alleviated some of our shortages of heavy equipment, demand for artillery pieces still remains largely unaffected. We should again approach our foreign benefactor for military equipment, this time, artillery."
-LOM_air_academy:0 "Visconti Air Academy"
+LOM_air_academy:0 "비스콘티 공군 사관학교"
 LOM_air_academy_desc:0 "Our monarch has donated a sizable amount of his own money to the construction of a new academy for the training of Air Force officers and the development of air doctrine. With funding already taken care of, we should build the academy as soon as possible."
-LOM_new_aircraft:0 "New Aircraft"
+LOM_new_aircraft:0 "신규 항공기"
 LOM_new_aircraft_desc:0 "Our tiny Air Force relies on outdated equipment. To have any chance of success in modern war, we must have the most advanced aircraft we can."
-LOM_combat_doctrines:0 "Combat Doctrines"
+LOM_combat_doctrines:0 "전투 교리"
 LOM_combat_doctrines_desc:0 "With our military now largely established and new drill instructors hired, we can further develop our military doctrine."
 
 ### Ideas ###
-LOM_duchy:0 "젊은 대공"
+LOM_duchy:0 "젊은 공작"
 LOM_duchy_desc:0 "Our Duchy is young, but our people and administration are resilient and driven to build a solid political foundation."
-LOM_constitution:0 "Constitution of the Lombard People"
+LOM_constitution:0 "롬바르드인의 헌법"
 LOM_constitution_desc:0 "Our country has begun to establish the constitutional foundation for its government."
-LOM_constitution_suffrage:0 "Constitution of the Lombard People"
+LOM_constitution_suffrage:0 "롬바르드인의 헌법"
 LOM_constitution_suffrage_desc:0 "Lombardia has become a constitutional monarchy. For the good of the nation, voting rights have been extended to the entire adult population, while the monarch retains a small degree of political power."
-LOM_constitution_absolute:0 "Constitution of the Lombard People"
+LOM_constitution_absolute:0 "롬바르드인의 헌법"
 LOM_constitution_absolute_desc:0 "The Lombard constitution guarantees the monarch broad governmental powers and enshrines them as the highest political authority in the nation."
-LOM_youth_league:0 "Lombard Youth League"
+LOM_youth_league:0 "롬바르드 청년 연맹"
 LOM_youth_league_desc:0 "A national youth organisation has been organised to promote morality and martial prowess."
-LOM_nationalism:0 "Lombard Nationalism"
+LOM_nationalism:0 "롬바르드 민족주의"
 LOM_nationalism_desc:0 "A unique Lombard identity has taken root, and many hold a strong nationalist sentiment."
-LOM_nationalism2:0 "Longobard Revivalism"
+LOM_nationalism2:0 "롱고바르드 복고주의"
 LOM_nationalism2_desc:0 "Renewed interest in the Longobards, for whom Lombardia is named, has further defined our national identity and increased nationalist sentiment."
 #LOM_education_reform:0 "Education Reform" already defined above as a focus
 #LOM_education_reform_desc:0 "The Lombardian education system has undergone comprehensive reform." already defined above as a focus desc
-LOM_recruitment_idea:0 "Mass Recruitment Drive"
-LOM_recruitment_idea_desc:0 "Lombardia has undertaken a massive campaign to encourage military recruitment."
-LOM_renaissance_idea:0 "Lombard Renaissance"
-LOM_renaissance_idea_desc:0 "Culturally and economically, Lombardia is thriving."
-LOM_renaissance_idea2:0 "Lombard Renaissance"
-LOM_renaissance_idea2_desc:0 "Culturally and economically, Lombardia is thriving."
-LOM_prussian_drill:0 "Prussian Drill"
-LOM_prussian_drill_desc:0 "Lombardia has hired German instructors to train its newly established officers corps."
-LOM_Italian_drill:0 "Italian Courage"
-LOM_Italian_drill_desc:0 " Lombardia has hired Italian instructors to train its newly established officers corps."
+LOM_recruitment_idea:0 "대규모 징병 운동"
+LOM_recruitment_idea_desc:0 "롬바르디아는 군 입대를 장려하기 위한 대규모 캠페인을 벌이고 있습니다."
+LOM_renaissance_idea:0 "롬바르드 르네상스"
+LOM_renaissance_idea_desc:0 "문화적으로, 그리고 경제적으로. 롬바르디아는 번영하고 있습니다."
+LOM_renaissance_idea2:0 "롬바르드 르네상스"
+LOM_renaissance_idea2_desc:0 "문화적으로, 그리고 경제적으로. 롬바르디아는 번영하고 있습니다."
+LOM_prussian_drill:0 "프로이센식 규율"
+LOM_prussian_drill_desc:0 "롬바르디아는 새로 임관될 장교들을 훈련시키기 위해 독일인 고문관들을 고용했습니다."
+LOM_Italian_drill:0 "이탈리아식 용기"
+LOM_Italian_drill_desc:0 "롬바르디아는 새로 임관될 장교들을 훈련시키기 위해 이탈리아인 고문관들을 고용했습니다."
 
 ### Opinion Modifiers ###
-LOM_returned_crown:0 "Returned the Iron Crown of Lombardy"
-LOM_refused_crown:0 "Refused to Return the Iron Crown of Lombardy"
-LOM_has_crown:0 "The Iron Crown of Lombardy has been returned"
-LOM_prussian_instructors:0 "Hired Prussian instructors"
-LOM_equipment_refused:0 "Refused to sell small arms"
+LOM_returned_crown:0 "롬바르디아 철관을 반환함"
+LOM_refused_crown:0 "롬바르디아 철관 반환을 거부함"
+LOM_has_crown:0 "롬바르디아 철관이 반환됨"
+LOM_prussian_instructors:0 "프로이센 고문관들을 고용함"
+LOM_equipment_refused:0 "보병 장비 판매를 거부함"
 
 ### Events ###
-lombardy.1.t:0 "Request the Crown of Lombardy"
-lombardy.1.d:0 "The Iron Crown of Lombardy, which sat upon the heads of Holy Roman Emperors for centuries, was taken by Austria in the Weltkrieg. While we are unable to force Austria to return it, they may be amicable should we request the crown’s return."
-lombardy.1.a:0 "Surely Vienna will heed us"
-lombardy.2.t:0 "[From.GetNameDefCap] requests the Crown of Lombardy"
-lombardy.2.d:0 "The Iron Crown of Lombardy, which sat upon the heads of Holy Roman Emperors for centuries, was taken by Austria in the Weltkrieg. The Duke of Lombardia has personally requested the return of the crown in order so that he may be crowned King."
-lombardy.2.a:0 "Return the Crown"
-lombardy.2.b:0 "Keep the Crown"
-lombardy.3.t:0 "[From.GetNameDefCap] agrees to return the Iron Crown"
-lombardy.3.d:0 "[From.GetNameDefCap] has agreed to return the Iron Crown. At last, our great Duke may hold a title worthy of his excellent character!"
-lombardy.3.a:0 "A great day!"
-lombardy.4.t:0 "[From.GetNameDefCap] refuses to return the Iron Crown"
-lombardy.4.d:0 "Our request to return the Iron Crown of Lombardy has been denied. As such, our good Duke will be unable to bear a title worthy of him."
-lombardy.4.a:0 "Unfortunate"
-lombardy.5.t:0 "The Coronation of Adriano I, King of Lombardy"
-lombardy.5.d:0 "Our most righteous monarch has been crowned King. Upon his enthronement, church bells throughout the country rang and a day of celebration was declared."
-lombardy.5.a:0 "Lunga Vita al Re!"
+lombardy.1.t:0 "롬바르디아 철관 반환 요청"
+lombardy.1.d:0 "몇 세기 동안 신성 로마 제국 황제들의 머리 위에서 자리를 지키던 롬바르디아 철관은 세계대전 당시 오스트리아가 강탈해갔습니다. 우리가 강제로 오스트리아에게서 이를 되찾아올 수는 없지만, 만약 반환을 요청한다면 그들은 우호적인 반응을 보일 수 있습니다."
+lombardy.1.a:0 "빈은 틀림없이 받아들여줄 것이다"
+lombardy.2.t:0 "[From.GetNameDefCap]가 롬바르디아 철관 반환을 요청하다"
+lombardy.2.d:0 "몇 세기 동안 신성 로마 제국 황제들의 머리 위에서 자리를 지키던 롬바르디아 철관은 세계대전 당시 오스트리아가 강탈해왔습니다. 롬바르디아 공작은 본인이 왕위에 오를 수 있도록 철관을 반환해 줄 것을 개인적으로 요청했습니다."
+lombardy.2.a:0 "철관을 돌려주자"
+lombardy.2.b:0 "철관은 우리 거다!"
+lombardy.3.t:0 "[From.GetNameDefCap]가 철관 반환에 동의하다"
+lombardy.3.d:0 "[From.GetNameDefCap]가 철관의 반환에 동의했습니다. 마침내 우리의 위대한 공작께서는 그 훌륭한 인격에 걸맞은 작위를 갖게 되셨습니다!"
+lombardy.3.a:0 "멋진 날이로군!"
+lombardy.4.t:0 "[From.GetNameDefCap]가 철관 반환을 거부하다"
+lombardy.4.d:0 "우리의 반환 요청이 거부당했습니다. 통탄스럽게도 우리의 위대한 공작께서는 그 훌륭한 인격에 걸맞은 작위를 갖지 못하실 것입니다."
+lombardy.4.a:0 "불행하게도"
+lombardy.5.t:0 "롬바르디아의 왕, 아드리아노 1세의 대관"
+lombardy.5.d:0 "우리의 가장 정당하신 군주께서 드디어 왕위에 올랐습니다. 그의 대관식 이후, 전국에서 교회의 종소리가 울려퍼졌고 이 날은 기념일로 선포되었습니다."
+lombardy.5.a:0 "국왕 폐하 만세(Lunga Vita al Re)!"
 lombardy.6.t:0 "Hiring new Drill Instructors"
 lombardy.6.d:0 "Our rapidly growing army needs new drill officers to properly train recruits. We can either hire instructors trained on the Prussian model, or those who adhere to an Italian model."
 lombardy.6.a:0 "Prussian drill is superior."
