--- a/Kaiserreich Korean Translation/localisation/KR_Lombardy_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Lombardy_l_english.yml
@@ -13,8 +13,8 @@ LOM_social_liberal_party:0 "기독교자유당"
 LOM_social_liberal_party_long:0 "기독교자유당"
 LOM_market_liberal_party:0 "자유당"
 LOM_market_liberal_party_long:0 "자유당"
-LOM_social_conservative_party:0 "카톨릭 연맹"
-LOM_social_conservative_party_long:0 "카톨릭 연맹"
+LOM_social_conservative_party:0 "가톨릭 연맹"
+LOM_social_conservative_party_long:0 "가톨릭 연맹"
 LOM_authoritarian_democrat_party:0 "농민당"
 LOM_authoritarian_democrat_party_long:0 "농민당"
 LOM_paternal_autocrat_party:0 "비스콘티 가문"
