--- a/Kaiserreich Korean Translation/localisation/KR_Prewar_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Prewar_l_english.yml
@@ -1,16 +1,16 @@
 l_english:
 
 ### Opinion Modifiers ###
-FRA_SWI_1:0 "1932 제네바 파업"
+FRA_SWI_1:0 "1932년 제네바 파업"
 FRA_SWI_2:0 "사회주의 로망디"
-FRA_SWI_3:0 "Backed Socialists"
-FRA_SWI_3_no:0 "Respected our sovereignty"
-FRA_SWI_4_disband:0 "Oppressed French minorities"
-FRA_SWI_4_respect:0 "Respected constitution"
-FRA_SWI_5:0 "Blasted traitors!"
-FRA_demand_romandy:0 "Demanded Haute-Savoie"
-FRA_demand_romandy2:0 "Demanded the Romandie"											 
-FRA_romandy_ease:0 "Eased tensions"
+FRA_SWI_3:0 "사회주의자 지원"
+FRA_SWI_3_no:0 "우리의 주권을 존중함"
+FRA_SWI_4_disband:0 "억압된 프랑스 소수민족들"
+FRA_SWI_4_respect:0 "헌법을 존중함"
+FRA_SWI_5:0 "파괴된 반역자들!"
+FRA_demand_romandy:0 "오트사부아 지역 요구"
+FRA_demand_romandy2:0 "로망디 지역 요구"											 
+FRA_romandy_ease:0 "긴장 완화"
 SWI_accept_romandy:0 "Despicable Neutrals"
 SWI_refuse_romandy:0 "Insolent fools"
 SWI_refuse_romandy_ger:0 "Swiss bravery"
