--- a/Kaiserreich Korean Translation/localisation/KR_East_Asia_Peace_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_East_Asia_Peace_l_english.yml
@@ -1,31 +1,31 @@
 ﻿l_english:
 
 ###Events###
-asiapeace.1.t:0 "Defeat in the East"
+asiapeace.1.t:0 "동아시아에서의 패배"
 asiapeace.1.d:0 "After a prolonged struggle in our possessions in East Asia, it seems that we have lost our last major base in the region.\nWith East Asia on a lockdown, and the incapability of our adversaries to realistically hit us in Europe, the best course of action seems to sign a peace with them and withdraw from East Asia."
-asiapeace.1.a:0 "Let us come together for peace!"
-asiapeace.1.b:0 "We shall liberate our colonies in time!"
+asiapeace.1.a:0 "휴전을 위해 함께 와라!"
+asiapeace.1.b:0 "이때 우리의 식민지들을 해방시켜아한다!"
 
-asiapeace.2.t:0 "[From.GetNameDef] surrenders!"
+asiapeace.2.t:0 "[From.GetNameDef]의 항복!"
 asiapeace.2.d:0 "With our successful elimination of [From.GetNameDef]'s bases in the region, they want to negotiate, seeking to pull out of East Asia altogether, leaving us to reap the spoils together with the others who have been fighting the reichspakt in this area."
 asiapeace.2.a:0 "Good riddance!"
 asiapeace.2.b:0 "No, we shall not rest until we march in Berlin!"
 
-asiapeace.3.t:0 "[From.GetNameDef] doesn't accept!"
+asiapeace.3.t:0 "[From.GetNameDef]이(가) 수락하지 않았습니다!"
 asiapeace.3.d:0 "Despite our showing of good will in evacuating the area, which seems to have been their goal, [From.GetNameDef] has let us know that they will not stop until they march through our capital.\nIt seems the war in the east isn't over after all."
 asiapeace.3.a:0 "Direct Rule from [From.GetCapital] doesn't sound appealing!"
 
-asiapeace.4.t:0 "Defeat in the East"
+asiapeace.4.t:0 "동아시아에서의 패배"
 asiapeace.4.d:0 "After a prolonged struggle in our possessions in East Asia, it seems that we have lost our last major base in the region.\nWith East Asia on a lockdown, and the incapability of our adversaries to realistically hit us in Europe, the best course of action seems to sign a peace with them and withdraw from East Asia."
 asiapeace.4.a:0 "Let us come together for peace!"
 asiapeace.4.b:0 "We shall liberate our colonies in time!"
 
-asiapeace.5.t:0 "[From.GetNameDef] surrenders!"
+asiapeace.5.t:0 "[From.GetNameDef]의 항복!"
 asiapeace.5.d:0 "With our successful elimination of [From.GetNameDef]'s bases in the region, they want to negotiate, seeking to pull out of East Asia altogether, leaving us to reap the spoils together with the others who have been fighting the Netherlands in this area."
 asiapeace.5.a:0 "Good riddance!"
 asiapeace.5.b:0 "No, we shall not rest until we march in Amsterdam!"
 
-asiapeace.6.t:0 "[From.GetNameDef] doesn't accept!"
+asiapeace.6.t:0 "[From.GetNameDef]이(가) 수락하지 않았습니다!"
 asiapeace.6.d:0 "Despite our showing of good will in evacuating the area, which seems to have been their goal, [From.GetNameDef] has let us know that they will not stop until they march through our capital.\nIt seems the war in the east isn't over after all."
 asiapeace.6.a:0 "Direct Rule from [From.GetCapital] doesn't sound appealing!"
 
