--- a/Kaiserreich Korean Translation/localisation/KR_Lithuania_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Lithuania_l_english.yml
@@ -321,29 +321,29 @@ lithuania.29.t:0 "어두운 징조"
 lithuania.29.d:0 "뱌체슬라프 블라디미로비치는 단순한 사람이었습니다. 비록 그의 가족은 19세기 말에 이곳에 도착한 러시아 식민지 주민들로부터 태어났지만, 그는 그가 러시아어를 말하고 러시아에 충성할 것을 약속하더라도, 자신을 리투아니아인이라고 생각하고 있습니다. 하지만 시대가 변했습니다. 강철늑대는 이미 빌뉴스 외곽에 있는 그의 평화로운 집을 공격했습니다. 그가 조국을 사랑함에도 불구하고, 뱌체슬라프는 이주하여 국가를 떠나 드빈스크에 정착할 수 밖에 없었습니다. 또 다른 도망치는 영혼이죠. 뱌체슬라프같은 일부 사람들은 새 정부에 자신들의 발을 들여놓고 항의했지만, 다른 사람들은 훨씬 더 적극적인 자세를 취하고 있습니다. 러시아, 폴란드, 벨로루시 소수민족들은 차별에 대한 조치를 촉구하며 공개적으로 바다스 정부에 항의하고 있습니다. 그 일에 대한 우리의 격렬한 반대에도 불구하고, 그들은 아마 운동을 조직하고 있을지도 모릅니다."
 lithuania.29.a:0 "리투아니아는 리투아니아인들을 위한 국가다!"
 
-lithuania.30.t:0 "The Alliance for Liberation"
-lithuania.30.d:0 "Representatives from Russian, Polish and Belorussian minorities, as well as many Lithuanian opposition politicians, have organised an underground assembly of the so-called 'Alliance for Liberation', a movement directed against our rule, calling for a fair treatment of the Slavic minorities. The STT has enough proof, however, that this is merely a lie, and the organisation is planning an armed pro-Russian rebellion against the state. The Alliance is unorganised and lacks a leader, but that might change soon."
-lithuania.30.a:0 "We'll keep an eye on this treachery."
+lithuania.30.t:0 "해방을 위한 동맹"
+lithuania.30.d:0 "러시아, 폴란드, 벨로루시 소수민족 대표들과 많은 리투아니아 야당 정치인들이 이른바 '해방을 위한 동맹' 운동이라는 지하 집회를 조직하고 있으며, 이 운동은 슬라브 소수민족에 대한 공정한 대우를 요구하고 있습니다. 그러나, STT는 이것이 단지 거짓말일 뿐이라는 충분한 증거를 가지고 있고, 그 단체는 국가에 대항하여 무장 친러 반란을 계획하고 있습니다. 동맹은 조직화되지 않았고 리더가 부족하지만, 그것은 곧 바뀔지도 모릅니다."
+lithuania.30.a:0 "우리는 이 배신에 대해 계속 지켜볼 것이다."
 
-lithuania.31.t:0 "The Silver Knight"
-lithuania.31.d:0 "Kazimieras Viktoras Tiškevičius, a Polish-Lithuanian noble from Kretinga, has risen to become the new leader of the pro-Slavic Alliance for Liberation. A descendant of the original House of Gediminas that ruled the Grand Duchy in medieval times, Tiškevičius is opposed to the Republic that we have founded and wishes to see a restoration of a monarchy - with him as the monarch, of course. The noble has turned the organisation into a vehicle for his underground campaign, and he has even gone so far as to begin requesting help from the Russians. He is aware that he cannot win on his own..."
-lithuania.31.a:0 "He's just a lost romantic. It'll blow away."
-lithuania.31.b:0 "This has gone too far! Arrest the traitor immediately!"
+lithuania.31.t:0 "은빛 기사"
+lithuania.31.d:0 "카지미에라스 출신의 폴란드-리투아니아 귀족 카지미에라스 빅토라스 파슈케비치우스는 친슬라브 해방 동맹의 새로운 지도자로 부상했습니다. 중세시대에 대공국을 통치했던 게디미나스의 후손인 파슈케비치우스는 우리가 세운 공화국에 반대하며 군주제의 복원을 바라고 있습니다. 이 귀족들은 이 조직을 지하 선거운동의 도구로 바꾸어 놓았습니다. 그는 심지어 러시아인들에게 도움을 요청하기까지 했습니다. 그는 혼자서는 이길 수 없다는 것을 알고 있습니다."
+lithuania.31.a:0 "그는 그냥 미망인일 뿐이야. 그는 날아가 버릴 것이다."
+lithuania.31.b:0 "이건 너무 지나쳤어! 즉시 반역자를 체포하라!"
 
-lithuania.32.t:0 "The Silver Knight"
-lithuania.32.d:0 "An interesting person has arrived to the Duma today. Kazimieras Viktoras Tiškevičius, a Polish-Lithuanian noble from Kretinga and the leader of the pro-Russian 'Alliance for Liberation' in Lithuania, he has arrived to request our help in his campaign. Tiškevičius believes that the only path for his party is to execute a coup and cut off the hydra that is the Lithuanian national-populists, and he even swears that he will align the restored monarchy to our interests should he be successful. But many do not believe his story. How should we respond?"
-lithuania.32.a:0 "Boy, we'll give you all we need, do the dirty work for us!"
-lithuania.32.b:0 "We're fine with Voldemaras in Lithuania, thanks."
+lithuania.32.t:0 "은빛 기사"
+lithuania.32.d:0 "오늘 흥미로운 사람이 두마에 도착했습니다. 카지미에라스 출신의 폴란드-리투아니아 귀족이자 리투아니아의 친러 '해방을 위한 동맹'의 지도자 카지미에라스 빅토라스 파슈케비치우스는 그의 운동에 도움을 요청하기 위해 도착했습니다. 파슈케비치우스는 자신의 당을 위한 유일한 길은 쿠데타를 실행하고 리투아니아 국민 대중주의자들의 우두머리를 차단하는 것이라고 믿고 있으며, 그는 심지어 그가 성공한다면 복원된 군주제를 우리의 이익에 맞출 것이라고 맹세하고 있습니다. 하지만 많은 사람들은 그의 이야기를 믿지 않습니다. 어떻게 반응해야 할까요?"
+lithuania.32.a:0 "소년, 필요한건 우리가 다 주겠다. 더러운 일을 맡아줘!"
+lithuania.32.b:0 "우리는 리투아니아의 볼데마라스와 잘 지내고 있다. 고맙군."
 
-lithuania.33.t:0 "Russophile Coup!"
-lithuania.33.d:0 "Kazimieras Viktoras Tiškevičius has raised the Alliance for Liberation for a march to Vilnius! His masses are bolstered by what seems to be supporting Russian soldiers - the bastard went to Russia and acquired their support in this endeavour! Traitor! Or maybe our next leader... \n\nThe Alliance for Liberation seeks to restore the Grand Duchy of Lithuania of old, and they are opposed by regular military units in the capital as well as Iron Wolf brigades. This is a battle for the history books..."
-lithuania.33.a:0 "Long live the new Grand Duke!"
-lithuania.33.b:0 "Iron Wolf militias successfully defend the capital!"
+lithuania.33.t:0 "친러 쿠데타!"
+lithuania.33.d:0 "카지미에라스 빅토라스 파슈케비치우스가 빌뉴스로의 행진을 위해 해방을 위한 동맹을 결성했습니다! 러시아 군인들이 그의 대중들을 지원해준 것으로 추측되고 있습니다. 그 놈이 러시아에 가서 그들의 지지를 얻었습니다! 배신자! 혹은 우리의 다음 지도자일지도... 해방을 위한 동맹은 옛날 리투아니아 대공국을 복원하려고 하고 있으며 수도에 있는 정규군과 강철 늑대에 반대하고 있습니다. 이것은 역사책을 위한 전투입니다..."
+lithuania.33.a:0 "새로운 대공 만세!"
+lithuania.33.b:0 "강철 늑대 민병대가 수도를 성공적으로 방어했다!"
 
-lithuania.34.t:0 "Lithuanian Coup Succeeds!"
-lithuania.34.d:0 "The Alliance for Liberation was successful! Kazimieras II Tiškevičius now reigns as the new monarch of Lithuania. And as expected, he is ready to pay lip service to us. A new puppet state has joined the Russian sphere of influence."
-lithuania.34.a:0 "Ura!"
+lithuania.34.t:0 "리투아니아 쿠데타가 성공하다!"
+lithuania.34.d:0 "해방을 위한 동맹이 성공했습니다! 카지미에시 2세 파슈케비치우스는 현재 리투아니아의 새 왕으로 군림하고 있습니다. 그리고 예상한대로, 그는 우리에게 입에 발린 말을 할 준비가 되어 있습니다. 새로운 꼭두각시 국가가 러시아의 영향권에 합류했습니다."
+lithuania.34.a:0 "우라!"
 
-lithuania.35.t:0 "Ignas Šeinius - The Red Flood"
-lithuania.35.d:0 "Ignas Šeinius, Lithuania's most famous impressionist writer, has recently published a new book, 'Raudonasis tvanas' (The Red Flood) that has just breached Lithuania's prison in literary obscurity. \n\nMuch like his famous 'Kuprelis', The Red Flood is a gripping impressionist tale about a love story between two young individuals in a divided country, but what is must interesting is the setting of the story. The novel takes place in an alternate timeline where the Brusilov Offensive was successful and knocked Austria-Hungary out of the Weltkrieg in 1916. This leads to a chain of events that result in an Entente victory. Germany is engulfed by revolution and becomes a Syndicalist nation, while Russia experiences a coup led by Kolchak, supported by the Black Hundreds, and becomes a totalitarian ultra-nationalist dictatorship. Europe is soon embroiled in war once more, and Lithuania becomes a front line, a bloodbath between the Germans and Russians, where even the strongest men perish and die in minutes. The end of the novel hints at a possible Russian breakthrough, as well as a naval invasion by the still-extant British Empire... \n\nThe book has been criticised for horrid descriptions of cruelty and war crimes, but Šeinius defends his tale, saying that 'something like this could have happened in another Universe'."
-lithuania.35.a:0 "Is he trying to make that Universe as bad as possible?"
+lithuania.35.t:0 "이그나스 세이니우스-붉은 홍수"
+lithuania.35.d:0 "리투아니아의 가장 유명한 인상주의 작가인 이그나스 세이니우스는 최근 문학적으로 불명확한 리투아니아의 감옥을 막 침범한 '붉은 홍수(Raudonasis tvanas)'라는 새로운 책을 출판했습니다. 그의 유명한 '쿠프렐(Kuprelis)'처럼, 붉은 홍수는 분단된 국가의 두 젊은이 사이의 사랑에 대한 인상적인 이야기이지만 재미있는 것은 이야기의 배경입니다. 이 소설은 브루실로프 공세가 성공하고 1916년 오스트리아-헝가리를 세계대전에서 몰아내는 대체역사로 진행됩니다. 이로 인해 협상국의 승리로 이어지는 일련의 사건이 발생합니다.  독일은 혁명에 휩싸여 생디칼리즘 국가가 된 반면, 러시아는 검은 백인단의 지원을 받은 콜차크가 이끄는 쿠데타를 경험하고 전체주의 초국가적 독재 정권이 됩니다. 유럽은 곧 다시 전쟁에 휘말리게되고, 리투아니아는 최전선이 되었으며, 독일과 러시아 사이의 피바다가 되어 힘센 사람들조차도 몇분만에 죽어갑니다. 이 소설의 끝부분은 러시아의 돌파구이자 여전히 멀리있는 대영제국에 의한 해군의 침략을 암시합니다. 이 책은 잔혹함과 전쟁 범죄에 대한 끔찍한 묘사로 비난 받아왔지만, 세이니우스는 '이런 일이 또 다른 우주에서 일어났을 수도 있다'라며 자신의 이야기를 변호합니다."
+lithuania.35.a:0 "그는 우주를 최대한 나쁘게 만들려고 하는건가?"
