--- a/Kaiserreich Korean Translation/localisation/KR_Poland_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Poland_l_english.yml
@@ -400,32 +400,32 @@ POL_BD_ON_WHR:0 "폴란드는 우크라이나에서 물러났다"
 POL_BD_ON_WHR_OTHERS:0 "폴란드는 우크라이나에서 물러났다"
 
 ### Events ###
-poland.1.t:0 "The Economy Fails!"
-poland.1.d:0 "Germany is in a heavy economic crisis, and our dependence on them economically means that our own economy will be crippled. Our farmers are making no money due to the large decrease in prices of agricultural products and factories are preparing to fire thousands of workers. It seems that this summer will be hard for the Polish people, both in the cities and in countryside. We need to take countermeasures before the unrest begins."
-poland.1.a:0 "Send additional police to the countryside!"
-poland.1.b:0 "The Kingdom has failed! Long live the Republic!"
+poland.1.t:0 "경제가 무너지다!"
+poland.1.d:0 "독일은 심각한 경제 공황 상태에 있고, 독일에 대한 우리의 경제적 의존으로 인해 우리는 심각한 영향을 받고 있습니다. 농산물 가격의 하락으로 인해 농부의 소득이 폭락했고 회사들은 수천 명의 노동자들을 해고하고 있습니다. 이번 여름은 도시민들과 시골 사람들에게 모두 어려운 시기가 될 것입니다. 벌어질 혼란을 막기 위해, 어떤 대책이 필요할 것입니다."
+poland.1.a:0 "지방에 더 많은 경찰을 보내라!"
+poland.1.b:0 "왕정은 실패했다! 공화국을 선포하라!"
 
-poland.2.t:0 "Bombing in Warsaw"
-poland.2.d:0 "Yesterday, over fifty people were killed and approximately 200 people were injured in a deadly bombing in Warsaw. The police doesn't yet know anything about who did it, but it is widely assumed that the Polish Underground Anarchist Party is responsible for the attack on the 'bourgeois'."
-poland.2.a:0 "A horrendous day!"
+poland.2.t:0 "바르샤바 폭탄 테러"
+poland.2.d:0 "어제 바르샤바에서의 폭탄 테러로 인해 50명 이상이 숨졌고 200여 명의 사람들이 부상당했습니다. 경찰은 아직 확실한 범인을 찾아내지는 못했지만, 지하의 아나키스트 조직이 부르주아에 대한 공격으로써 폭탄 테러를 감행했다는 것이 유력합니다."
+poland.2.a:0 "끔찍한 날이군!"
 
-poland.3.t:0 "March on Myslenice"
+poland.3.t:0 "미슐레니체에서의 행진"
 poland.3.d:0 "A local nationalist leader, Adam Doboszynski, decided to mobilise his branch of the 'Patriots for Saving Poland' organisation and march through Poland. Things however did not go peaceably as Doboszynski decided to disarm the local police after Syndicalists attacked his men. It's a sign of serious problems in our country!"
 poland.3.a:0 "Send the army in and arrest everyone involved in this putsch!"
 
-poland.4.t:0 "General unrest in the countryside!"
+poland.4.t:0 "지방에서의 지속적인 불안"
 poland.4.d:0 "Since our national exports have fallen, our economy is so weak that it cannot support production. Prices are plummeting and thousands of peasants are demanding the government do something about the economic crisis. Peasant hatred has passed onto the gentry and the authorities, policemen have reported they are having a hard time in keeping peace in the countryside."
 poland.4.a:0 "Can this get any worse?"
 
-poland.5.t:0 "Ukrainian Terror!"
+poland.5.t:0 "우크라이나인의 테러!"
 poland.5.d:0 "With the incorporation of Galicia the number of Ukrainians in our country has increased greatly. The larger cities of Eastern Galicia are populated by a majority of Poles, but the countryside the opposite is true and there are a majority of Ukrainians. Disenfranchised Ukrainians who are very unhappy about being part of Poland and have set up an organisation called the 'Ukrainian Insurgent Army' that is starting to attack our military and government officials."
 poland.5.a:0 "This is really bad!"
 
-poland.6.t:0 "Solutions for our Immense Problems"
+poland.6.t:0 "우리가 직면한 문제에 대한 해결책"
 poland.6.d:0 "Now we face two crises, a weak economy and a crisis of authority caused by the former. The police and the army are having serious problems keeping the country together. We need to seriously rethink our policies."
-poland.6.a:0 "Liberalise, introduce more democracy in Poland."
-poland.6.b:0 "The government collapses!"
-poland.6.c:0 "Invite the military to form a new Government."
+poland.6.a:0 "자유롭게, 폴란드에 민주주의를 전파하자"
+poland.6.b:0 "정부가 붕괴했다!"
+poland.6.c:0 "군대를 불러서 새 정부를 만들어라."
 
 poland.7.t:0 "Chaos in the Countryside"
 poland.7.d:0 "After the collapse of the government in Poland, various factions have risen up and are vying for control of the country. Both the Syndicalist party and the Nationalist circles are strong enough to take over the Polish cities and countryside. With the remaining authorities sceptical of their own ability to retain what power they have left, most have given up and...."
@@ -726,7 +726,7 @@ poland.70.a:0 "Barbarians!"
 
 poland.71.t:0 "Terrorist Attack"
 poland.71.d:0 "Ukrainian terrorists planted and detonated a bomb in a major intersection of Stryj, which killed 34 people and injured another 120 people."
-poland.71.a:0 "Barbarians!"
+poland.71.a:0 "야만적인 놈들!"
 
 poland.72.t:0 "Organisation of Ukrainian Nationalists"
 poland.72.d:0 "After we conquered Ukraine, radicals have set up the 'Organisation of Ukrainian Nationalists', with the principal aim of armed rebellion against us!"
