--- a/Kaiserreich Korean Translation/localisation/KR_Cuba_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Cuba_l_english.yml
@@ -17,6 +17,7 @@ CUB_social_conservative_party:0 "민주당"
 CUB_social_conservative_party_long:0 "국가 민주 연합"
 CUB_authoritarian_democrat_party:0 "진보주의자"
 CUB_authoritarian_democrat_party_long:0 "진보당"
+CUB_paternal_autocrat_party:0 "군부"
 CUB_paternal_autocrat_party_long:0 "군부"
 CUB_national_populist_party:0 "정통주의자"
 CUB_national_populist_party_long:0 "쿠바 혁명당-정통주의"
