--- a/Kaiserreich Korean Translation/localisation/KR_Flanders-Wallonia_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Flanders-Wallonia_l_english.yml
@@ -480,7 +480,7 @@ BEL_KW_Line:0 "KW 선 건설"
 BEL_KW_Line_desc:0 "An extra defensive fortification belt consisting of mainly tank traps and small bunkers will provide us even more time to stop a foreign invasion."
 BEL_Expansion_Lundendorf_Line:0 "루덴도르프선 확장"
 BEL_Expansion_Lundendorf_Line_desc:0 "The Ludendorfflinie is the primary defensive belt on the French border and is supposed to be the first place where we stop the French. Further additions and fortifying of weakspots should thus be a priority for our military budget."
-BEL_Chasseurs_Ardennais:0 "저항과 물기"
+BEL_Chasseurs_Ardennais:0 "저항하고 물어뜯어라"
 BEL_Chasseurs_Ardennais_desc:0 "Resiste et Mords is the famous motto of the Chasseurs Ardennais. They are our higly mobile and defensive unit that is based in the woods and hills of the Ardennes. While most of this territory now falls under German control, our troops still guard the forests and are a final measure to stop France from entering the Rhineland."
 
 BEL_Independent_Forces:0 "독립적 운용"
