--- a/Kaiserreich Korean Translation/localisation/KR_Mittelafrika_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Mittelafrika_l_english.yml
@@ -23,7 +23,7 @@ MAF_Anglo_Volunteers1:0 "영국 자원병"
 MAF_Anglo_Volunteers2:0 "영국 자원병"
 MAF_Opium_Profit:0 "아편 수익"
 MAF_Opium_Epidemic:0 "아편 유행"
-MAF_Vorbeck_idea:0 "폰 레토프 포르벡의 유산"
+MAF_Vorbeck_idea:0 "폰 레토프-포어베크의 정신"
 MAF_Landtag:0 "아프리카 주의회"
 MAF_Black_Pilots:0 "아프리카인 파일럿"
 MAF_Mercenary_Pilots:0 "용병 파일럿"
